authorization/src/k8s/deployment-authorization.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-app
  namespace: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization-app
  template:
    metadata:
      labels:
        app: authorization-app
    spec:
      containers:
        - name: authorization-app
          image: dkmplis/authorization-module:latest
          ports:
            - containerPort: 8087
            - containerPort: 8187
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8187
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8187
            initialDelaySeconds: 15
            periodSeconds: 5
